# sys-dock

./: .gitignore  CROSS_PLATFORM_SUPPORT.md  OS_INTEGRATION_ARCHITECTURE.md  README.md  TOP_PRIORITY_FEATURES.md  WIDGETS_INFO.md  package-lock.json  package.json
.github/workflows/: test-build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/icons/: HeaderIcons.tsx  OverviewIcons.tsx  QuickControlIcons.tsx  SidebarIcons.tsx  SystemIcon.tsx  WeatherIcon.tsx  WidgetIcons.tsx  icons.icns  index.tsx
src/assets/logos/: SysDockLogo.tsx
src/components/: Header.css  Header.tsx  Layout.css  Layout.tsx  Logs.css  Logs.tsx  Overview.css  Overview.tsx  Performance.css  Performance.tsx  Processes.css  Processes.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  Widgets.css  Widgets.tsx  gpuSim.ts
src/components/widgets/: AboutWidget.css  AboutWidget.tsx  CalculatorWidget.css  CalculatorWidget.tsx  CalendarWidget.css  CalendarWidget.tsx  CircularProgress.css  CircularProgress.tsx  ClockWidget.css  ClockWidget.tsx  NotesWidget.css  NotesWidget.tsx  PerformanceChart.css  PerformanceChart.tsx  QuickControlsWidget.css  QuickControlsWidget.tsx  ReminderWidget.css  ReminderWidget.tsx  SystemChart.css  SystemChart.tsx  SystemInfoWidget.css  SystemInfoWidget.tsx  TimerWidget.css  TimerWidget.tsx  VisualizationWidget.css  VisualizationWidget.tsx  WeatherWidget.css  WeatherWidget.tsx
src/context/: AlertContext.tsx  SidebarContext.tsx  ThemeContext.tsx
src/widgets/: ReminderWidget.css  ReminderWidget.tsx  WeatherWidget.css  WeatherWidget.tsx
