[package]
name = "sys-dock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
wmi = "0.10"
raw-cpuid = "10"
get_if_addrs = "0.5"
image = "0.24"
base64 = "0.21"
winapi = { version = "0.3", features = ["winuser", "wingdi"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

